Addition on swagger documentation